--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
 
 /*Header*/
 
-.header {
+header {
     padding: 10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: rgb(49, 47, 47);
     
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
     border: 1px solid rgb(49, 47, 47);
@@ -31,7 +31,7 @@ body {
 
 /* Navbar */
 
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -40,11 +40,11 @@ body {
     
 }
 
-.header nav ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header nav ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -55,12 +55,12 @@ a {
     border-bottom: 2px solid rgb(209, 122, 51);
 }
 
-.navbar, ul, li a:hover {
+nav, ul, li a:hover {
     border-bottom: 1px;
     color: white;
 }
 
-.navbar, ul, li a:hover {
+nav, ul, li a:hover {
     color: white;
 }
 
@@ -103,106 +103,164 @@ main {
 .left-side {
     display: flex;
     flex-direction: column;
-    font-size: 35px;
-    font-style: normal;
+    font-size: 36px;
+    padding-right: 0;
+    text-align: right;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 
 .about {
     padding-left: 80px;
     margin-bottom: 20px;
+    border-right: 3px solid rgb(49, 47, 47);
+    padding-bottom: 200px;
 }
 
 .work {
     padding-left: 80px;
     margin-bottom: 20px;
+    border-right: 3px solid rgb(49, 47, 47);
+    padding-bottom: 730px;
+    margin-top: 8px;
+
 }
 
 .contact {
     padding-left: 80px;
     margin-bottom: 20px;
+    border-right: 3px solid rgb(49, 47, 47);
+    padding-bottom: 0px;
+    margin-top:8px;
 }
 
-
-
+.paragraphs {
+    line-height: 1.5em;
+    margin-bottom: 20px;
+}
+    
+.paragraph {
+    padding-bottom: 10px;
+}
 
 
 
 .right-side {
-    flex: 3;
     margin-right: 30px;
-}
-
-/* .banner {
-    position: relative;
-    display: block;
-    width: 100%;
-}
-
-.banner-image {
-    display: block;
-    width: 100%;
-    height: 300px;
-}
-
-.banner h2 {
-    position: absolute;
-    bottom: 15px;
-    right: 60px; */
-
-.projects {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    margin-left: 15px;
 }
 
 .surf {
     position: relative;
     display: block;
     width: 100%;
+    padding-top: 5px;
 }
 
 .surf-image {
     display:block;
     width: 100%;
-    height: 350px;
+    height: 400px;
     border: 3px solid rgb(209, 122, 51);
 }
 
 .surf h3 {
     position: absolute;
-    bottom: 30px;
-    left: 30px;
+    width: 100px;
+    height: 100px;
+    bottom: 40px;
+    left: 15px;
     font-size: 20px;
     font-weight:bold;
+    background:rgb(209, 122, 51)
+    
 }
 
 .surf p {
     position: absolute;
-    bottom: 12px;
-    left: 30px;
+    bottom: 25px;
+    left: 15px;
     font-size: small;
 }
 
+.small-projects {
+    margin-top: 10px;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1em;
+}
+
 .calculator {
-    width: 50%;
+    position: relative;
+    width: 100%;
+}
+
+.calculator h3 {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    bottom: 50px;
+    left: 15px;
+    font-size: 20px;
+    font-weight:bold;
+    background:rgb(209, 122, 51)
+}
+
+.calculator p {
+    position: absolute;
+    bottom: 50px;
+    left: 15px;
+    font-size: small;
+}
+
+.calculator-image {
+    display: block;
+    width: 100%;
     height: 150px;
     border: 3px solid rgb(209, 122, 51);
 }
 
-.puzzle {
-    width: 50%;
+.puzzle-image {
+    display: block;
+    width: 100%;
     height: 150px;
     border: 3px solid rgb(209, 122, 51);
 }
 
-.run-buddy {
-    width: 50%;
+.run-image {
+    display: block;
+    width: 100%;
     height: 150px;
     border: 3px solid rgb(209, 122, 51);
 }
 
-.LED-Wall {
-    width: 50%;
+.LED {
+    position: relative;
+    width: 100%;
+}
+
+.LED h3 {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    bottom: 50px;
+    left: 15px;
+    font-size: 20px;
+    font-weight:bold;
+    background:rgb(209, 122, 51)
+}
+
+.LED p {
+    position: absolute;
+    bottom: 50px;
+    left: 15px;
+    font-size: small;
+}
+
+.LED-image {
+    display: block;
+    width: 100%;
     height: 150px;
     border: 3px solid rgb(209, 122, 51);
 }
@@ -212,6 +270,8 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .phone-number {
