--- a/style.css
+++ b/style.css
@@ -75,8 +75,10 @@ nav, ul, li a:hover {
 .banner-image {
     display: block;
     width: 100%;
-    height: 300px;
+    height: 260px;
 }
+
+/* Subtitle */
 
 .banner h2 {
     position: absolute;
@@ -100,55 +102,62 @@ main {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+/* Left Side Column */
+
 .left-side {
     display: flex;
     flex-direction: column;
     font-size: 36px;
     padding-right: 0;
-    text-align: right;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+    margin-top: 25px;
+    margin-bottom: 40px;
+    padding-left: 70px;
 }
 
 .about {
-    padding-left: 80px;
+    padding-left: 115px;
     margin-bottom: 20px;
     border-right: 3px solid rgb(49, 47, 47);
-    padding-bottom: 200px;
+    padding-bottom: 160px;
 }
 
 .work {
-    padding-left: 80px;
+    padding-left: 127px;
     margin-bottom: 20px;
     border-right: 3px solid rgb(49, 47, 47);
-    padding-bottom: 730px;
+    padding-bottom: 800px;
     margin-top: 8px;
 
 }
 
 .contact {
-    padding-left: 80px;
-    margin-bottom: 20px;
+    padding-left: 85px;
+    margin-bottom: 10px;
     border-right: 3px solid rgb(49, 47, 47);
-    padding-bottom: 0px;
+    padding-bottom: 10px;
     margin-top:8px;
+}
+
+/* Right Side Column */
+
+.right-side {
+    margin-right: 45px;
+    margin-left: 25px;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 .paragraphs {
     line-height: 1.5em;
     margin-bottom: 20px;
 }
-    
-.paragraph {
+
+.paragraph2 {
     padding-bottom: 10px;
 }
 
-
-
-.right-side {
-    margin-right: 30px;
-    margin-left: 15px;
-}
+/* Large Project Image */
 
 .surf {
     position: relative;
@@ -182,6 +191,8 @@ main {
     left: 15px;
     font-size: small;
 }
+
+/* Small Project Images */
 
 .small-projects {
     margin-top: 10px;
@@ -217,21 +228,66 @@ main {
 .calculator-image {
     display: block;
     width: 100%;
-    height: 150px;
+    height: 200px;
     border: 3px solid rgb(209, 122, 51);
+}
+
+.puzzle {
+    position: relative;
+    width: 100%;
+}
+
+.puzzle h3 {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    bottom: 50px;
+    left: 15px;
+    font-size: 20px;
+    font-weight:bold;
+    background:rgb(209, 122, 51)
+}
+.puzzle p {
+    position: absolute;
+    bottom: 50px;
+    left: 15px;
+    font-size: small;
 }
 
 .puzzle-image {
     display: block;
     width: 100%;
-    height: 150px;
+    height: 200px;
     border: 3px solid rgb(209, 122, 51);
+}
+
+.run {
+    position: relative;
+    width: 100%;
+}
+
+.run h3 {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    bottom: 50px;
+    left: 15px;
+    font-size: 20px;
+    font-weight:bold;
+    background:rgb(209, 122, 51)
+}
+
+.run p {
+    position: absolute;
+    bottom: 50px;
+    left: 15px;
+    font-size: small;
 }
 
 .run-image {
     display: block;
     width: 100%;
-    height: 150px;
+    height: 200px;
     border: 3px solid rgb(209, 122, 51);
 }
 
@@ -261,9 +317,10 @@ main {
 .LED-image {
     display: block;
     width: 100%;
-    height: 150px;
+    height: 200px;
     border: 3px solid rgb(209, 122, 51);
 }
+
 /* Contact Info */
 
 .contact-info {
