--- a/style.css
+++ b/style.css
@@ -107,6 +107,44 @@ main {
 .left-side {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    text-align:end;
+    margin-right: 45px;
+    margin-left: 25px;
+    margin-top: 25px;
+    margin-bottom: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 35px;
+}
+
+.about {
+    flex: 0.38;
+    border-right: 3px solid rgb(49, 47, 47);
+    padding-right: 10px;
+}
+
+.work {
+    flex: 2;
+    border-right: 3px solid rgb(49, 47, 47);
+    padding-right: 10px;
+    margin-top:40px;
+
+}
+
+.contact {
+    flex: 0.1;
+    border-right: 3px solid rgb(49, 47, 47);
+    padding-right: 10px;
+    margin-top: 40px;
+}
+
+
+
+
+
+/* .left-side {
+    display: flex;
+    flex-direction: column;
     font-size: 36px;
     padding-right: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -137,7 +175,7 @@ main {
     border-right: 3px solid rgb(49, 47, 47);
     padding-bottom: 10px;
     margin-top:8px;
-}
+} */
 
 /* Right Side Column */
 
