--- a/Assets/style.css
+++ b/Assets/style.css
@@ -8,6 +8,13 @@ body {
     background-color: #e8eee9;
 }
 
+@media (max-width: 450px) {
+    body {
+        margin-right:0;
+        padding-right:0;
+    }
+}
+
 /*Header*/
 
 header {
@@ -22,7 +29,7 @@ header {
 
 header h1 {
     display: inline-block;
-    font-size: 48px;
+    font-size: 40px;
     border: 1px solid rgb(49, 47, 47);
     padding-right: 10px;
     padding-left: 70px;
@@ -31,7 +38,7 @@ header h1 {
     color: rgb(49, 47, 47);
 }
 
-@media (max-width: 840px) {
+@media (max-width: 950px) {
     header {
         display: flex;
         justify-content: space-evenly;
@@ -40,6 +47,13 @@ header h1 {
         padding-right: 110px;
         padding-left: 110px;
         margin: 0px;
+    }
+}
+
+@media (max-width: 600px) {
+    header h1 {
+        display: flex;
+        text-align: center;
     }
 }
 
@@ -52,7 +66,7 @@ header nav {
     font-size: 20px;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 510px) {
     header {
         padding-top: 0;
         padding-bottom: 10px;
@@ -60,7 +74,8 @@ header nav {
     header nav ul{
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        line-height: 1.5;
+        align-items: center;
     }
 }
 
@@ -91,6 +106,7 @@ nav, ul, li a:hover {
 
 /* Banner with Caption */
 /* Photo by Oleg Magni from Pexels */
+
 .banner {
     position: relative;
     display: block;
@@ -124,8 +140,14 @@ main {
     grid-template-columns: 25% 75%;
     grid-gap:1em;
     margin: 30px;
-    margin-right: 0;
+    margin-right: 150px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+@media (max-width: 950px) {
+    main {
+        margin: 10px;
+    }
 }
 
 /* Left Side Column */
@@ -137,16 +159,36 @@ main {
     text-align:end;
     margin-right: 45px;
     margin-left: 25px;
-    margin-top: 25px;
+    margin-top: 20px;
     margin-bottom: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 35px;
 }
 
+@media (max-width: 950px) {
+    .left-side {
+        display: flex;
+        margin-left: 0;
+        padding-left: 0;
+    }
+}
+
 .about {
-    flex: 0.25;
+    flex: 0.475;
     border-right: 3px solid rgb(49, 47, 47);
     padding-right: 10px;
+}
+
+@media (max-width: 950px) {
+    .about {
+        flex: 0.48;
+    }
+}
+
+@media (max-width: 500px) {
+    .about {
+        flex: 0.42;
+    }
 }
 
 .work {
@@ -154,7 +196,18 @@ main {
     border-right: 3px solid rgb(49, 47, 47);
     padding-right: 10px;
     margin-top:40px;
+}
 
+@media (max-width: 950px) {
+    .work {
+        flex: 1.8;
+    }
+}
+
+@media (max-width: 500px) {
+    .work {
+        flex: 0.75;
+    }
 }
 
 .contact {
@@ -164,8 +217,17 @@ main {
     margin-top: 40px;
 }
 
+@media (max-width: 950px) {
+    .contact {
+        flex: 0.25;
+    }
+}
 
-
+@media (max-width: 500px) {
+    .contact {
+        flex: 0.1;
+    }
+}
 /* Right Side Column */
 
 .right-side {
@@ -202,16 +264,14 @@ main {
 
 .surf h3 {
     position: absolute;
-    width: 100px;
-    height: 100px;
-    bottom: 40px;
-    left: 15px;
-    font-size: 20px;
-    font-weight:bold;
-    background:rgb(209, 122, 51)
+    padding: 10px;
+    bottom: 75px;
+    font-size: 35px;
+    font-weight: normal;
+    background: rgb(209, 122, 51);
 }
 
-@media (max-width: 880px) {
+@media (max-width: 950px) {
     .surf-image {
         height: 200px;
         width: 100%;
@@ -235,13 +295,11 @@ main {
 
 .calculator h3 {
     position: absolute;
-    width: 100px;
-    height: 100px;
+    padding: 10px;
     bottom: 50px;
-    left: 15px;
-    font-size: 20px;
-    font-weight:bold;
-    background:rgb(209, 122, 51)
+    font-size: 35px;
+    font-weight: normal;
+    background: rgb(209, 122, 51);
 }
 
 .calculator-image {
@@ -258,13 +316,11 @@ main {
 
 .puzzle h3 {
     position: absolute;
-    width: 100px;
-    height: 100px;
+    padding: 10px;
     bottom: 50px;
-    left: 15px;
-    font-size: 20px;
-    font-weight:bold;
-    background:rgb(209, 122, 51)
+    font-size: 35px;
+    font-weight: normal;
+    background: rgb(209, 122, 51);
 }
 
 .puzzle-image {
@@ -281,13 +337,11 @@ main {
 
 .run h3 {
     position: absolute;
-    width: 100px;
-    height: 100px;
+    padding: 10px;
     bottom: 50px;
-    left: 15px;
-    font-size: 20px;
-    font-weight:bold;
-    background:rgb(209, 122, 51)
+    font-size: 35px;
+    font-weight: normal;
+    background: rgb(209, 122, 51);
 }
 
 .run-image {
@@ -304,13 +358,11 @@ main {
 
 .LED h3 {
     position: absolute;
-    width: 100px;
-    height: 100px;
+    padding: 10px;
     bottom: 50px;
-    left: 15px;
-    font-size: 20px;
-    font-weight:bold;
-    background:rgb(209, 122, 51)
+    font-size: 35px;
+    font-weight: normal;
+    background: rgb(209, 122, 51);
 }
 
 .LED-image {
@@ -320,7 +372,7 @@ main {
     border: 3px solid rgb(209, 122, 51);
 }
 
-@media (max-width: 880px) {
+@media (max-width: 950px) {
     .small-projects {
         display: flex;
         flex-direction: column;
@@ -357,7 +409,7 @@ main {
     border-bottom: 2px solid rgb(209, 122, 51);
 }
 
-@media (max-width: 840px) {
+@media (max-width: 950px) {
     .contact-info {
         display: flex;
         flex-direction: column;
